[package]
name = "xxxdh-js"
license = "MIT"
version = "0.1.2"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
categories = ["cryptography"]
keywords = ["crypto", "cryptography", "x3dh"]
description = "WASM wrapper around xxxdh library implementing Extended Triple Diffie-Hellman key exchange."
repository = "https://github.com/alexyer/xxxdh-js"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptimitives = "0.6.0"
cryptraits = "0.3.0"
getrandom = "0.2.3"
js-sys = "0.3.55"
rand_core = "0.6.3"
serde = { version = "1.0.133", features = ["derive"] }
serde-wasm-bindgen = "0.4.1"
wasm-bindgen = "0.2.78"
xxxdh = "0.6.0"

[features]
default = ["getrandom/js"]